tests/function/wrong_args_nb.rev
fn f(a: int, b: int) {}

f(1) // error: wrong arguments number, expected 2 but found 1
f(1, 2, 3) // error: wrong arguments number, expected 2 but found 3